stacks/ai/litellm/k8s/base/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm
  namespace: litellm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`litellm.local`)
      kind: Rule
      services:
        - name: litellm
          port: 4000
  tls: {}
